# printssistant

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  NODE_GITIGNORE_ADDITIONS.txt  NOTICE.txt  README.md  correcting XML.txt  dev-up.ps1  files.txt  mapping_report.json  printssistant  pyproject.toml  response.json
.github/rulesets/: Mapping Issue_J212929-02.txt  main-protection.json
.github/workflows/: ci.yml  release.yml
XML Files/: J208823.xml  J208830.xml
api/: main.py
cli/: main.py
config/: checklists.yml  policies.yml  press_capabilities.yml  product_presets.yml  stock_rules.yml  xml_map.yml
data/: product_training_sample.csv
samples/: 00002_J210883-02.json  J208819.xml  J208822-01.xml  J208822-02.xml  J208829-01.xml  J208829-02.xml  J210883-02.xml  J212158.xml  J212597.xml  J212660 (1).xml  J212853-01.xml  J212853-02.xml  J212853-03.xml  J212855.xml  J212857-01.xml  J212857-02.xml  J212864-01.xml  J212868.xml  J212872-01.xml  J212872-02.xml  J212875.xml  J212877.xml  J212879.xml  J212880-01.xml  J212880-02.xml  J212882-01.xml  J212882-02.xml  J212902.xml  J212903.xml  J212911.xml  J212914.xml  J212915.xml  J212922.xml  J212923.xml  J212924.xml  J212925.xml  J212926.xml  J212928-01.xml  J212928-02.xml  J212928-03.xml  (+60 more)
scripts/: inspect_mapping.py  train_product_classifier.py
src/api/: main.py
src/prepress_helper/: cli.py  config_loader.py  jobspec.py  router.py  xml_adapter.py
src/prepress_helper/kb/sample_policies/: rich_black.md
src/prepress_helper/ml/: product_classifier.py
src/prepress_helper/skills/: color_policy.py  doc_setup.py  fold_math.py  min_specs.py  policy_enforcer.py  soft_nags.py  spot_policy.py  wide_format.py
tests/: .tmp.jobspec.json  test_api.py  test_api_smoke.py  test_cli.py  test_config_loader_alias.py  test_dedupe_setup.py  test_dedupe_tips.py  test_pipeline.py  test_policy_enforcer.py  test_router_intents_new.py  test_router_wide.py  test_spot_policy.py  test_tips_ascii.py  test_wide_format.py  test_xml_imposition_mapping_first.py  test_xml_map_assertions.py  test_xml_mapping.py  test_xml_normalization.py
tests/goldens/: J208819.jobspec.json
ui/: app.py
